--- a/eda.ipynb
+++ b/eda.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,20 +46,17 @@
     }
    ],
    "source": [
-    "# Merge datasets on state\n",
+    "# merge datsets by state for EDA\n",
     "df = pd.merge(cities_df, ribcot_df, on=[\"state\"], how=\"inner\")\n",
     "\n",
-    "df = pd.merge(cities_df, ribcot_df, on=[\"state\"], how=\"inner\")\n",
-    "\n",
-    "# ----- Box Plot: Regional Variation in Cardiovascular Disease Cases -----\n",
+    "# plot visual\n",
     "plt.figure(figsize=(15, 6))\n",
     "sns.boxplot(x=\"state\", y=\"cardiovascular\", data=df)\n",
-    "plt.xticks(rotation=90)  # Rotate state labels for readability\n",
+    "plt.xticks(rotation=90)\n",
     "plt.title(\"Regional Variation in Cardiovascular Disease Cases\")\n",
     "plt.xlabel(\"State\")\n",
     "plt.ylabel(\"Cardiovascular Disease Cases\")\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -73,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,11 +88,11 @@
     "df = df.select_dtypes(include = \"number\")\n",
     "correlation = df.corr()[\"cardiovascular\"].drop(\"cardiovascular\").sort_values(ascending=False)\n",
     "\n",
-    "# Plot correlation values as a bar chart\n",
+    "# plot the correlation as a boxplot\n",
     "plt.figure(figsize=(10, 6))\n",
     "correlation.plot(kind=\"bar\", color=\"skyblue\", edgecolor=\"black\")\n",
     "\n",
-    "# Formatting the plot\n",
+    "# plot the visual\n",
     "plt.xlabel(\"Features\")\n",
     "plt.ylabel(\"Correlation with Cardiovascular Disease\")\n",
     "plt.title(\"Feature Correlation with Cardiovascular Disease\")\n",
