added requirements and edited eda explanantion

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -108,8 +108,13 @@
     "## Visualization 2\n",
     "\n",
     "- We can take away from this visualization that obesity and diabetes is one of the biggest indicators of cardiovascular disease.\n",
-    "- To further understand how are machine learning algorithms may behave, we need to conduct ML algorythms and conduct SHAP analyses to see which features really affect our different ML models."
+    "- To further understand how our machine learning algorithms may behave, we need to conduct ML algorithms and conduct SHAP analyses to see which features really affect our different ML models."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
