--- a/Project.ipynb
+++ b/Project.ipynb
@@ -77,6 +77,7 @@
     "cleaned_cities500_wide_path = \"data/cleaned_cities500_wide.csv\"\n",
     "cleaned_ribcot_2014_path = \"data/cleaned_ribcot_2014.csv\"\n",
     "\n",
+    "# commented out so that we dont download new data everytime\n",
     "# cities500_wide_df.to_csv(cleaned_cities500_wide_path, index=False)\n",
     "# ribcot_2014_df.to_csv(cleaned_ribcot_2014_path, index=False)\n"
    ]
@@ -101,7 +102,7 @@
     "filtered_cities_df = cities_df[cities_df.apply(lambda row: (row[\"CityName\"], row[\"State\"]) in common_pairs, axis=1)]\n",
     "filtered_ribcot_df = ribcot_df[ribcot_df.apply(lambda row: (row[\"CityName\"], row[\"State\"]) in common_pairs, axis=1)]\n",
     "\n",
-    "# Save the filtered datasets\n",
+    "# Save the filtered datasets (commented out so that we don't download new data everytime we run)\n",
     "# filtered_cities_df.to_csv(\"data/filtered_cities500_wide.csv\", index=False)\n",
     "# filtered_ribcot_df.to_csv(\"data/filtered_ribcot_2014.csv\", index=False)"
    ]
@@ -315,7 +316,7 @@
     "        print(sql_statement)  # Print each SQL statement\n",
     "\n",
     "\n",
-    "# Read the CSV files\n",
+    "# read the CSV files\n",
     "ribcot_df = pd.read_csv(\"data/filtered_ribcot_2014.csv\")\n",
     "cities500_df = pd.read_csv(\"data/filtered_cities500_wide.csv\")\n",
     "\n",
