added more comments

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "## Visualization\n",
     "\n",
-    "- Looking at the cardiovascular row, we can see that binge drinking actually has a negative correlation to cardiovascular related google search trends\n",
+    "- Looking at the cardiovascular row, we can see that binge drinking actually has a negative correlation to cardiovascular related google search trends. On the ther hand, non physical activity and obesity rate seems to have a positive correlation to cardio vascular related search trends\n",
     "- We need to further check what health habits really affect our machine learning models by doing a SHAP analysis."
    ]
   },
