added data section

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -1,25 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "from sklearn.model_selection import (\n",
-    "    GridSearchCV,\n",
-    "    cross_val_score,\n",
-    "    cross_validate,\n",
-    "    train_test_split\n",
-    ")\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,7 +41,20 @@
    "metadata": {},
    "source": [
     "### Data\n",
-    "\n"
+    "\n",
+    "1. https://www.kaggle.com/datasets/GoogleNewsLab/health-searches-us-county/data (Google search trends dataset)\n",
+    "\n",
+    "2. https://data.cdc.gov/500-Cities-Places/500-Cities-Local-Data-for-Better-Health-2016-relea/9z78-nsfp/about_data  (CDC 500 cities dataset)\n",
+    "\n",
+    "We selected these datasets because the CDC dataset provides behavioural health data at a city level, while the Google trends dataset reflects public interest and concern through online search behaviour. By combining them, we were able to explore how real-world health indicators relate to online search trends. These datasets combined are especially relevant to our research questions that aim to explore whether and how local health behaviours influence what people search for regarding cardiovascular health.\n",
+    "\n",
+    "For data cleaning on the Google search trends dataset, we renamed the column 'dma' to 'CityName' for a more understandble column and ensured that the last two characters in 'CityName' correspond to a state code. Then, we split 'CityName' to create a new column 'State' which contains the state code. Furthermore, we reshaped the dataframe to have Year and Condition as seperate variables and filtered to only include that from year 2014. Lastly, we pivot wideer by column 'Condition' and filtered both datasets so that only cities and states that are in both datasets are kept.\n",
+    "\n",
+    "For data cleaning on the CDC dataset, we filtered Measurement type for AgeAdjPrv and filtered category for unhealthhy behaviours. Then we removed unnecessary columns and keeping only Year, CityName, State, Category, Measure, Data_value, Population, and CityFIPS. We also removed any entry missing either state or city name. Then, we pivot wider by column 'Measure' and renamed columns for easier downstream data usage. Lastly, we filtered datasets so that only cities and states that are in both datasets are kept.\n",
+    "\n",
+    "While we prepared the data, we encountered a few important things to consider that could affect interpretation. First, both datasets are limited to specific cities, which meant rural areas and smaller municipals are excluded. this limits the generalizability of our findins across the entire US population. \n",
+    "\n",
+    "Our EDA revealed weak to moderate correlations between health behaviours and cardiovascular related serach interests. Obesity rate and no physical activity showed the strongest positive correlations, while binge drinking had the strongest negative correlation. This suggests that inactive populations may search more about cardiovascular related issues."
    ]
   },
   {
