Methodolgy and RIBCOT cleaning

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -48,13 +48,30 @@
     "\n",
     "We selected these datasets because the CDC dataset provides behavioural health data at a city level, while the Google trends dataset reflects public interest and concern through online search behaviour. By combining them, we were able to explore how real-world health indicators relate to online search trends. These datasets combined are especially relevant to our research questions that aim to explore whether and how local health behaviours influence what people search for regarding cardiovascular health.\n",
     "\n",
-    "For data cleaning on the Google search trends dataset, we renamed the column 'dma' to 'CityName' for a more understandble column and ensured that the last two characters in 'CityName' correspond to a state code. Then, we split 'CityName' to create a new column 'State' which contains the state code. Furthermore, we reshaped the dataframe to have Year and Condition as seperate variables and filtered to only include that from year 2014. Lastly, we pivot wideer by column 'Condition' and filtered both datasets so that only cities and states that are in both datasets are kept.\n",
+    "For data cleaning on the Google search trends dataset, we renamed the column 'dma' to 'CityName' for a more understandble column and ensured that the last two characters in 'CityName' correspond to a state code. Then, we split 'CityName' to create a new column 'State' which contains the state code. Furthermore, we reshaped the dataframe to have Year and Condition as seperate variables and filtered to only include that from year 2014. Lastly, we pivot wideer by column 'Condition' and filtered both datasets so that only cities and states that are in both datasets are kept. The code and result of cleaning can be viewed in `ribcot_cleaning.ipynb`\n",
     "\n",
     "For data cleaning on the CDC dataset, we filtered Measurement type for AgeAdjPrv and filtered category for unhealthhy behaviours. Then we removed unnecessary columns and keeping only Year, CityName, State, Category, Measure, Data_value, Population, and CityFIPS. We also removed any entry missing either state or city name. Then, we pivot wider by column 'Measure' and renamed columns for easier downstream data usage. Lastly, we filtered datasets so that only cities and states that are in both datasets are kept.\n",
+    "\n",
+    "After both datasets are cleaned, we merged the two datasets to form a single table based on equivalent state codes using SQL.Forming a dataset containing both behavioural health data and online search behaviour.\n",
+    "\n",
+    "These cleaning steps were sufficient as they ensured that both datasets are standardized, interpretable, and combinable. Supporting our next research steps.\n",
     "\n",
     "While we prepared the data, we encountered a few important things to consider that could affect interpretation. First, both datasets are limited to specific cities, which meant rural areas and smaller municipals are excluded. this limits the generalizability of our findins across the entire US population. \n",
     "\n",
     "Our EDA revealed weak to moderate correlations between health behaviours and cardiovascular related serach interests. Obesity rate and no physical activity showed the strongest positive correlations, while binge drinking had the strongest negative correlation. This suggests that inactive populations may search more about cardiovascular related issues."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Methodology\n",
+    "\n",
+    "To answer our first research question, we will be employing supervised machine learning models, specifically decision trees, kNN, random forest, and XGBoost. Each models effectiveness on predicting the volume of cardivascular-related Google searches will be evaluated based on their Root Mean Squared Error (RMSE) via 5-fold cross validation. We are using multiple models for prediction as we want to use the best model. RMSE is our main accuracy evaluator for quantifying the difference between predicted and actual values, and is easy to interpret.\n",
+    "\n",
+    "To answer our second research question, we will be using SHAP analysis to identify key features that greatly affect the model’s search trend prediction. SHAP is used in machine learning, which breaks down a prediction into a sum of contributions from each feature, which individual contributions are called feature importances. SHAP is our top pick as its conversion to numerical values allows us to easily identify specific health behaviors that greatly alter predicted cardiovascular-related search volume.\n",
+    "\n",
+    "To answer our third research question, we will be conducting exploratory data analysis. Specifically, we will convert the numeric search score of each region into an ordinal ranking from low, medium, to high. Which is then correlated with the measures for chronic disease for those specific regions. This is method was chosen as we are focusing on discovering patterns and differences with response to regions."
    ]
   },
   {
