--- a/models.ipynb
+++ b/models.ipynb
@@ -67,35 +67,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "dce51819",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Loading the data\n",
     "data = pd.read_csv(\"data/result.csv\")\n",
     "## DC,Washington,601723,1150000,20.3,18,20.5,25.4,35.2,51"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "875290d8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  State   CityName  Population2010  cityfips  BingeDrinking  SmokingRate  \\\n",
+      "0    GA     Albany           77434   1301052           10.9         23.7   \n",
+      "1    TX   Amarillo          190695   4803000           16.5         18.5   \n",
+      "2    AK  Anchorage          291826    203000           20.2         18.3   \n",
+      "3    GA    Atlanta          420003   1304000           14.1         16.6   \n",
+      "4    GA    Augusta          195844   1304204           12.5         21.8   \n",
+      "\n",
+      "   NoPhysicalActivity  ObesityRate  SleepDeprivation  GeoCode  Cancer  \\\n",
+      "0                33.1         40.4              46.9      525      76   \n",
+      "1                27.9         32.0              32.9      634      67   \n",
+      "2                19.2         27.7              33.4      743      62   \n",
+      "3                22.4         31.6              40.4      524      72   \n",
+      "4                28.1         36.0              44.1      520      69   \n",
+      "\n",
+      "   Cardiovascular  Depression  Diabetes  Diarrhea  Obesity  Rehab  Stroke  \\\n",
+      "0              71          64        77        64       64     62      64   \n",
+      "1              34          67        74        77       39     62      54   \n",
+      "2              32          55        68        60       41     33      68   \n",
+      "3              41          51        64        63       35     56      53   \n",
+      "4              28          54        59        72       24     70      62   \n",
+      "\n",
+      "   Vaccine  \n",
+      "0       52  \n",
+      "1       58  \n",
+      "2       74  \n",
+      "3       51  \n",
+      "4       41  \n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(80, 19)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()\n",
+    "## Checking if data is valid\n",
+    "print(data.head())\n",
     "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89e2aaff",
+   "metadata": {},
+   "source": [
+    "## Data Preparation\n",
+    "\n",
+    "Since we want to predict cardiovascular search trends using health behaviors, they are loaded as target and features respectively."
    ]
   },
   {
@@ -114,8 +159,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74ef13bd",
+   "metadata": {},
+   "source": [
+    "#### Effectiveness of using county-level health behaviors to predict cardiovascular related search trends\n",
+    "\n",
+    "Using RMSE score during 5-fold cross validation to assess the four model's effectiveness."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1330ff5c",
    "metadata": {},
    "outputs": [
@@ -138,6 +193,8 @@
       "XGBoost:\n",
       "  R²:   Mean = -0.2758, Std = 0.3252\n",
       "  RMSE: Mean = 12.2593, Std = 4.3964\n",
+      "\n",
+      "Mean Cardiovascular Search Score = 43.0375\n",
       "\n"
      ]
     }
@@ -159,8 +216,29 @@
     "    rmse_scores = -cross_val_score(model, X, y, cv=cv, scoring='neg_root_mean_squared_error')\n",
     "    \n",
     "    print(f\"{name}:\")\n",
-    "    print(f\"  R²:   Mean = {r2_scores.mean():.4f}, Std = {r2_scores.std():.4f}\")\n",
-    "    print(f\"  RMSE: Mean = {rmse_scores.mean():.4f}, Std = {rmse_scores.std():.4f}\\n\")"
+    "    print(f\"  RMSE: Mean = {rmse_scores.mean():.4f}, Std = {rmse_scores.std():.4f}\\n\")\n",
+    "\n",
+    "print(f\"Mean Cardiovascular Search Score = {y.mean()}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "463f8ce9",
+   "metadata": {},
+   "source": [
+    "## Result Analysis\n",
+    "\n",
+    "The result of the 4 models are mostly similar, where decision tree has a RMSE 14, while kNN, Random Forest, and XGBoost are all around 12. XGBoost is the best performing model with an RMSE of 12.2593. This implies that the average distance between predicted values and actual values is 12.2593. This is not a great result since the Percentage Error is around 27%, and a good model should have less than 10% error. However, we believe this model would do much better given a larger dataset, as there are only 80 observations in our data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f173afd",
+   "metadata": {},
+   "source": [
+    "#### Health behaviors with the greatest impact on cardiovascular related search trends\n",
+    "\n",
+    "The following are code used to conduct shap analysis on our best performing model XGBoost."
    ]
   },
   {
@@ -212,6 +290,16 @@
     "}).sort_values(by='Mean |SHAP value|', ascending=False)\n",
     "\n",
     "print(importance_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c0cd8fa",
+   "metadata": {},
+   "source": [
+    "## Result Analysis\n",
+    "\n",
+    "From the results above, BingeDrinking had a surprising effect on cardiovascular search trend predictions, having a feature importance score of 3.58, much higher than the two following features SleepDeprivation and NoPhysicalActivity, with a importance score of 2.86 and 2.61 respectively. Interestingly, ObesityRate has by far the lowest importance score, meaning ObesityRate does not have a great impact on cardiovascular related searches, even though it is considered the leading cause of cardiovascular diseases."
    ]
   }
  ],
