--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -78,6 +78,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Results and Discussion\n",
+    "\n",
+    "Our study aimed to predict cardio vascular related search trends based on county level health behaviours using regression models and also to understand how the behaviours vary across clusters of search intensity.\n",
+    "\n",
+    "Models:\n",
+    "\n",
+    "Four regression models were evaluated (Decision tree, k-nn, random forest, and XGBoost) using 5-fold cross validation with RMSE as the performance metric. XGBoost performed the best with an RMSE of 12.26, which tells us that on average, the model's predictions deviated from actual values by about 12 units on the cardiovascular trend score scale. However, this shows about a 27% error relative to the mean score, suggesting predictive ability with room for improvement.\n",
+    "\n",
+    "SHAP Analysis:\n",
+    "\n",
+    "SHAP values revealed that Binge Drinking was the most influential predictor of cardiovascular search trends, then sleep deprivation and no physical activity. What was surprising to us was that obesity rate, which is a widely accepted cardiovascular risk factor, showed the lowest SHAP value, indicating it contributed the least to the model's prediction.\n",
+    "\n",
+    "Cluster Analysis:\n",
+    "\n",
+    "Using k-means clustering on the target variable (cardiovascualr search trend), three clusters were formed\n",
+    "- Low (21-36)\n",
+    "- Medium (37-53)\n",
+    "- High (55-86)\n",
+    "\n",
+    "Analyzing health behaviours within these clusters showed distinct trends:\n",
+    "- Smoking rate, no physical activity, and obesity rate increased with higher cardiovascular search scores\n",
+    "- Binge drinking was inversely related. Cities with lower binge drinking rates tended to show higher cardiovascular related searches\n",
+    "\n",
+    "Graphs:\n",
+    "\n",
+    "The graphs are in the models.ipynb file.\n",
+    "\n",
+    "Validity Considerations:\n",
+    "Internal Validity:\n",
+    "\n",
+    "    Internal validity asks whether or not the study accurately measures what it intends to measure. Our use of regression models with cross validation strengthens internal validity, as it reduces overfitting and helps ensure that the relationship between between health behaviours and search trends is consistent across subsets of the data. SHAP values further improve interpretability, showing how individual features contribute to each models prediction.\n",
+    "\n",
+    "External validity:\n",
+    "\n",
+    "    External validity asks to what extent do our findings generalize to other popuations or real world situations. Given that the dataset contains only 80 cities, the small sample size limits generalizability. Furthermore, search behaviour can be influenced by factors unrelated to helath as well, such as memdia coverage or socioeconomic variables not included in the datset. the results may not be accurate for cities not represented in teh dataset or for other countries with different healthcare systems and cultural norms. Further research can be done by exploring trends such as the inverse relationship between binge drinking and cardiovascular searches on more diverse datsets in the future.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Discussion of Results\n",
+    "\n",
+    "Our results showed that it is moderately possible to predict cardiovascular reltaed search trends using helath behaviours like binge drinking, smoking, physical inactivity, obesity rate, and sleep deprivation. From all the models we tested, XGBoost performed the best, but still had an average error of around 27% which is considered high. this suggests that while these health behaviours do have some connection to online search trends, they do not uflly explain the entirety of the variations. It is very likely that other factors, such as media attention may also influence search behaviours but were not included in the models we tested.\n",
+    "\n",
+    "For our clustering, we found three main distinct groups (low, medium, high) of search activities. We observed that cities in the \"High\" clsuter tended to have higher smoking rates, less physical activity, and greater obesity. On the contrary, binge drinking showed an unexpected trend, with lower level in high search cities. This may suggest that binge drinking is not as closely linked with search trends and public concern.\n",
+    "\n",
+    "We believe that the relatively weak predictive performance and unexpected binge drinking trend may result from the small sample size, limited features, and the use of search data as a predictor rather than actual health statistics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Future Work\n",
+    "\n",
+    "The results we got can be helpful for public health officials, city planners, and researchers who are interested in using alternate data sources like Google search trends to explore public concern around cardiovascular health. Since we found behaviours like smoking, physcial inactivity, and obesity are strongly linked to increased search interest in cardiovascualr issues, areas showing an increase in these search trends might benefit from targeted health interventions or awareness campaigns.\n",
+    "\n",
+    "If we had more time and had the ability to, we would find larger datasets to test our models on. Our dataset only included 80 cities but if we had a larger datset to test on, this would improve the accuracy and allow for better analysis. Exploring more features like socioeconomic status could also help us provide better insight into what drives both actual cardiovascular risk and search trends."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### References\n",
     "\n",
     "[1] Yang, S., Santillana, M., & Kou, S. C. (2015). Accurate estimation of influenza epidemics using Google search data via ARGO. *Proceedings of the National Academy of Sciences*, 112(47), 14473–14478. https://doi.org/10.1073/pnas.1515373112\n",
@@ -86,6 +151,20 @@
     "\n",
     "[3] Barros, J. M., Duggan, J., & Rebholz-Schuhmann, D. (2020). The application of internet-based sources for public health surveillance (infoveillance): systematic review. *Journal of Medical Internet Research*, 22(3), e13680."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AI Declaration\n",
+    "\n",
+    "We did not use AI for this project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
