--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Our research project explores how unhealthy behaviours and local health trends influence online health-related search patterns. We research whether public health data \n",
-    "predict Google search trends related to cardiovascular disease and identify key contributing factors influencing such behaviours.\n",
+    "Our research project explores on how unhealthy behaviours and local health trends influence online health-related search patterns. We research whether public health data \n",
+    "can effectively predict Google search trends related to cardiovascular disease and identify key contributing factors influencing such behaviours.\n",
     "\n",
     "### Research Question\n",
     "\n",
@@ -21,15 +21,15 @@
     "\n",
     "### Impact\n",
     "\n",
-    "Understanding the extent to which health behaviours influence cardiovascualr related search interest can help the public health officials anticipate informational needs in communities before real clinical issues arise. By knowing which unhealthy behaviours like smoking, obesity, lack of physical activity are most strongly associated with online health-seeking behaviour, we can better adjust public education and intervention strategies. Furthermore, knowing which factors most impact cardiovascular related searches through SHAP values provides insight into predictive models and allows for more focused prevention efforts. This can also serve as a supplementary surveillance tool for monitoring public health needs and concern, offering a proactive way to detect and address emerging health concerns before they cause an outbreak.\n",
+    "Understanding the extent to which health behaviours influence cardiovascualr related search interest can help the public health officials anticipate informational needs in communities before real clinical issues arise. By knowing which unhealthy behaviours like smoking, obesity, lack of physical activity are most strongly associated with online health-seeking behaviour, we can better adjust public education and intervention strategies. Furthermore, knowing which factors greatly impact cardiovascular related searches through SHAP values provides insight into predictive models and allows for more focused prevention efforts. This can also serve as a supplementary surveillance tool for monitoring public health needs and concern, offering a proactive way to detect and address emerging health concerns before they cause an outbreak.\n",
     "\n",
     "### Related Work\n",
     "\n",
-    "The use of online data sources to understand health trends has been a growing area of research with the large-scale health databses anmd internet based behavioural signals like Google Trends. Previous research demonstreates the imprtance of this work by highlighting the how online seach data can reflect population level health trends, awareness, and even disease forecasting.\n",
+    "The use of online data sources to understand health trends has been a growing area of research with the large-scale health databses and internet based behavioural signals like Google Trends. Previous research demonstreates the importance of this work by highlighting how online seach data can reflect population level health trends, awareness, and even disease forecasting.\n",
     "\n",
     "One of the most influencial studies in this field was conducted by **Yang et al. (2015)**[1], who introduced a method called the AutoRegression with Google search data (ARGO) to predict influenza trends by combining historical surveillance data with Google search frequencies. Their paper explains how online search patterns can closely track real-world data disease trends, setting an example for using search data for our own research research questions.\n",
     "\n",
-    "Secondly, **Tran et al. (2015)**[2] analyzed Google Trends to assess public interest in cardiovascular disease. They found that cardiovascualr related searches reached a peak during awareness months and major news events. This suggests that population level interest in heart health is both timely and reactive to real world conditions. This supports the idea thjat cardiovasculat related searches are important indicators of public health concerns.\n",
+    "Secondly, **Tran et al. (2015)**[2] analyzed Google Trends to assess public interest in cardiovascular disease. They found that cardiovascualr related searches reached a peak during awareness months and major news events. This suggests that population level interest in heart health is both timely and reactive to real world conditions. This supports the idea that cardiovascular related searches are important indicators of public health concerns.\n",
     "\n",
     "Lastly, **Barros et al. (2020)**[3] conducted a systematic review on public health surveillance studies using internet based data, including search engine queries and social media. Their findings confirm that behaviours like smoking and obesity are frequently monitored using digital signals, especially traditional surveillance systems are delayed or unavailable.\n",
     "\n",
@@ -46,11 +46,11 @@
     "\n",
     "2. https://data.cdc.gov/500-Cities-Places/500-Cities-Local-Data-for-Better-Health-2016-relea/9z78-nsfp/about_data  (CDC 500 cities dataset)\n",
     "\n",
-    "We selected these datasets because the CDC dataset provides behavioural health data at a city level, while the Google trends dataset reflects public interest and concern through online search behaviour. By combining them, we were able to explore how real-world health indicators relate to online search trends. These datasets combined are especially relevant to our research questions that aim to explore whether and how local health behaviours influence what people search for regarding cardiovascular health.\n",
+    "We selected these datasets because the CDC dataset provides behavioural health data at a city level, while the Google trends dataset reflects public interest and concern through online search behaviour. By combining them, we were able to explore how real-world health indicators relate to online search trends. These datasets combined are especially relevant to our research questions that aim to explore whether or not and how local health behaviours influence what people search for regarding cardiovascular health.\n",
     "\n",
     "For data cleaning on the Google search trends dataset, we renamed the column 'dma' to 'CityName' for a more understandble column and ensured that the last two characters in 'CityName' correspond to a state code. Then, we split 'CityName' to create a new column 'State' which contains the state code. Furthermore, we reshaped the dataframe to have Year and Condition as seperate variables and filtered to only include that from year 2014. Lastly, we pivot wideer by column 'Condition' and filtered both datasets so that only cities and states that are in both datasets are kept. The code and result of cleaning can be viewed in `ribcot_cleaning.ipynb`\n",
     "\n",
-    "For data cleaning on the CDC dataset, we filtered Measurement type for AgeAdjPrv and filtered category for unhealthhy behaviours. Then we removed unnecessary columns and keeping only Year, CityName, State, Category, Measure, Data_value, Population, and CityFIPS. We also removed any entry missing either state or city name. Then, we pivot wider by column 'Measure' and renamed columns for easier downstream data usage. Lastly, we filtered datasets so that only cities and states that are in both datasets are kept.\n",
+    "For data cleaning on the CDC dataset, we filtered Measurement type for AgeAdjPrv and filtered category for unhealthhy behaviours. Then we removed unnecessary columns and keeping only Year, CityName, State, Category, Measure, Data_value, Population, and CityFIPS. We also removed any entry missing either state or city name. Then, we pivot wider by column 'Measure' and renamed columns for easier downstream data usage. Lastly, we filtered datasets so that only cities and states that are in both datasets are kept. We were unable to provide the code for cleaning as the team member who cleaned it did not push their code.\n",
     "\n",
     "After both datasets are cleaned, we merged the two datasets to form a single table based on equivalent state codes using SQL. Forming a dataset containing both behavioural health data and online search behaviour.\n",
     "\n",
@@ -71,7 +71,7 @@
     "\n",
     "To answer our second research question, we will be using SHAP analysis to identify key features that greatly affect the model’s search trend prediction. SHAP is used in machine learning, which breaks down a prediction into a sum of contributions from each feature, which individual contributions are called feature importances. SHAP is our top pick as its conversion to numerical values allows us to easily identify specific health behaviors that greatly alter predicted cardiovascular-related search volume.\n",
     "\n",
-    "To answer our third research question, we will be conducting exploratory data analysis. Specifically, we will convert the numeric search score of each region into an ordinal ranking from low, medium, to high. Which is then correlated with the measures for chronic disease for those specific regions. This is method was chosen as we are focusing on discovering patterns and differences with response to regions."
+    "To answer our third research question, we will be conducting exploratory data analysis. Specifically, we will convert the numeric search score of each region into an ordinal ranking from low, medium, to high using k-means clustering. Where each groups is them compared with other groups in health behaviors. This is method was chosen as we are focusing on discovering patterns and differences with response to searches."
    ]
   },
   {
@@ -84,7 +84,7 @@
     "\n",
     "Models:\n",
     "\n",
-    "Four regression models were evaluated (Decision tree, k-nn, random forest, and XGBoost) using 5-fold cross validation with RMSE as the performance metric. XGBoost performed the best with an RMSE of 12.26, which tells us that on average, the model's predictions deviated from actual values by about 12 units on the cardiovascular trend score scale. However, this shows about a 27% error relative to the mean score, suggesting predictive ability with room for improvement.\n",
+    "Four regression models were evaluated (Decision tree, k-NN, random forest, and XGBoost) using 5-fold cross validation with RMSE as the performance metric. XGBoost performed the best with an RMSE of 12.26, which tells us that on average, the model's predictions deviated from actual values by about 12 units on the cardiovascular trend score scale. However, this shows about a 27% error relative to the mean score, suggesting predictive ability with room for improvement.\n",
     "\n",
     "SHAP Analysis:\n",
     "\n",
@@ -121,7 +121,7 @@
    "source": [
     "### Discussion of Results\n",
     "\n",
-    "Our results showed that it is moderately possible to predict cardiovascular reltaed search trends using helath behaviours like binge drinking, smoking, physical inactivity, obesity rate, and sleep deprivation. From all the models we tested, XGBoost performed the best, but still had an average error of around 27% which is considered high. this suggests that while these health behaviours do have some connection to online search trends, they do not uflly explain the entirety of the variations. It is very likely that other factors, such as media attention may also influence search behaviours but were not included in the models we tested.\n",
+    "Our results showed that it is moderately possible to predict cardiovascular reltaed search trends using helath behaviours like binge drinking, smoking, physical inactivity, obesity rate, and sleep deprivation. From all the models we tested, XGBoost performed the best, but still had an average error of around 27% which is considered high. this suggests that while these health behaviours do have some connection to online search trends, they do not fully explain the entirety of the variations. It is very likely that other factors, such as media attention may also influence search behaviours but were not included in the models we tested.\n",
     "\n",
     "For our clustering, we found three main distinct groups (low, medium, high) of search activities. We observed that cities in the \"High\" clsuter tended to have higher smoking rates, less physical activity, and greater obesity. On the contrary, binge drinking showed an unexpected trend, with lower level in high search cities. This may suggest that binge drinking is not as closely linked with search trends and public concern.\n",
     "\n",
@@ -134,9 +134,9 @@
    "source": [
     "### Future Work\n",
     "\n",
-    "The results we got can be helpful for public health officials, city planners, and researchers who are interested in using alternate data sources like Google search trends to explore public concern around cardiovascular health. Since we found behaviours like smoking, physcial inactivity, and obesity are strongly linked to increased search interest in cardiovascualr issues, areas showing an increase in these search trends might benefit from targeted health interventions or awareness campaigns.\n",
+    "The results we got can be helpful for public health officials, city planners, and researchers who are interested in using alternative data sources like Google search trends to explore public concern around cardiovascular health. Since we found behaviours like smoking, physcial inactivity, and obesity are strongly linked to increased search interest in cardiovascualr issues, areas showing an increase in these search trends might benefit from targeted health interventions or awareness campaigns.\n",
     "\n",
-    "If we had more time and had the ability to, we would find larger datasets to test our models on. Our dataset only included 80 cities but if we had a larger datset to test on, this would improve the accuracy and allow for better analysis. Exploring more features like socioeconomic status could also help us provide better insight into what drives both actual cardiovascular risk and search trends."
+    "If we had more time and had the ability to, we would find larger datasets to test our models on. Our dataset only included 80 cities but if we had a larger datset to test on, this would greatly improve the accuracy and allow for better analysis. Exploring more features like socioeconomic status could also help us provide better insight into what drives both actual cardiovascular risk and search trends."
    ]
   },
   {
@@ -169,7 +169,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cpsc330",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -183,9 +183,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
