added pros and cons for methodology

--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -71,7 +71,18 @@
     "\n",
     "To answer our second research question, we will be using SHAP analysis to identify key features that greatly affect the model’s search trend prediction. SHAP is used in machine learning, which breaks down a prediction into a sum of contributions from each feature, which individual contributions are called feature importances. SHAP is our top pick as its conversion to numerical values allows us to easily identify specific health behaviors that greatly alter predicted cardiovascular-related search volume.\n",
     "\n",
-    "To answer our third research question, we will be conducting exploratory data analysis. Specifically, we will convert the numeric search score of each region into an ordinal ranking from low, medium, to high using k-means clustering. Where each groups is them compared with other groups in health behaviors. This is method was chosen as we are focusing on discovering patterns and differences with response to searches."
+    "To answer our third research question, we will be conducting exploratory data analysis. Specifically, we will convert the numeric search score of each region into an ordinal ranking from low, medium, to high using k-means clustering. Where each groups is them compared with other groups in health behaviors. This is method was chosen as we are focusing on discovering patterns and differences with response to searches.\n",
+    "\n",
+    "Pros and Cons\n",
+    "\n",
+    "Pros:\n",
+    "- Testing four different regression models allowed for comparison across appraoches and increased the reliability of our findings.\n",
+    "- Using cross validation improves internal validity by ensuring that the model performs consistently across different subsets of the data.\n",
+    "- SHAP analysis values provide a way to interpret feature importance which helps us understand which health behaviours had the most influence on predictions.\n",
+    "\n",
+    "Cons:\n",
+    "- We have a small sample size which limits how the models generalize our findings.\n",
+    "- Only five health behaviours were used which can simplify the factors nfluencing cardio vascular trends which can leave out other important features like age or income."
    ]
   },
   {
